# kafka_example

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-kafka-ui.yml  docker-compose-kafka.yml  docker-compose.yml  kafka-jmx-config.yml  pyproject.toml  set_env.sh
notebooks/: admin.ipynb  consumer.ipynb  producer.ipynb
src/: main.py  settings.py
src/aiokafka_example/: consumer.py  producer.py  run_consumer.py  run_producer.py
src/confluent_kafka_example/: admin.py  consumer.py  producer.py  run_admin.py  run_consumer.py  run_loop.py  run_producer.py
src/consumer/: main.py
src/kafka_service_example/: handlers.py  kafka_hadler.py  run.py  run_admin.py
src/kafka_service_example/entities/: admin.py
src/kafka_service_example/services/: admin.py  base.py  consumer.py  producer.py
src/kafka_services/: kafka_hadler.py
src/producer/: main.py
