[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
annotated-types = "0.6.0"
attrs = "23.2.0"
cramjam = "2.8.3"
crc32c = "2.4"
iniconfig = "2.0.0"
kafka-python = "2.0.2"
kazoo = "2.5.0"
mccabe = "0.7.0"
packaging = "24.0"
pgpubsub = "0.0.5"
psycopg2 = "2.8.6"
psycopg2-binary = "2.8.6"
py = "1.11.0"
pycodestyle = "2.11.0"
pydantic = "2.7.1"
pydantic-settings = "2.2.1"
pydantic-core = "2.18.2"
pykafka = "2.8.0"
python-dotenv = "1.0.1"
python-snappy = "0.7.0"
six = "1.16.0"
tabulate = "0.8.9"
tomli = "2.0.1"
typing-extensions = "4.11.0"
orjson = "^3.10.6"
aiokafka = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"